# NTUST-DSD-Project2

./: .gitignore  CMakeLists.txt  README.md
include/: BooleanMinimizer.hpp
res/: case1.pla  case2.pla  custom1.pla  custom2.pla  custom3.pla  input.pla  output.pla
src/: B11330203.cpp  BooleanMinimizer.cpp  main.cpp  test.cpp
